--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 # Set the datasource password
 spring.datasource.password=
+
+# Path for storing uploaded files
+file.upload-dir=./uploads/
